# CW_-5

./: .gitignore  README.md  main.py  pyproject.toml
src/: class_db_manager.py  class_get_hh_api.py  config.py
