[tool.poetry]
name = "cw-№5"
version = "0.1.0"
description = ""
authors = ["Yura Sarvas <grey-matter88@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.3"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
